# AmazingHand

./: .gitignore  README.md  learn
AmazingHand+/: README.md
AmazingHand_Enhanced/: README.md
AmazingHand_Enhanced/Demo/AHControl/: Cargo.toml
AmazingHand_Enhanced/Demo/AHControl/config/: 2hands.toml  r_hand.toml
AmazingHand_Enhanced/Demo/AHControl/src/: lib.rs  main.rs
AmazingHand_Enhanced/Demo/AHSimulation/AHSimulation/: mj_mink_left.py  mj_mink_right.py
AmazingHand_Enhanced/Demo/AHSimulation/AHSimulation/AH_Left/mjcf/: robot.xml
AmazingHand_Enhanced/Demo/AHSimulation/AHSimulation/AH_Left/mjcf/assets/: bushing_0608_04.part  custom_servo_horn.part  distal.part  finger_frame_1.part  finger_frame_2.part  gimbal.part  l_hand_plate.part  l_wrist_interface.part  link.part  parallel_pin_2_x_10__fee063fca0c8b40e46bbc4ffff61d999.part  parallel_pin_2_x_16__da4b7ddbe9d803fe3fbc70f2e822b99b.part  ph_pan_head_screw_m2x0_40_x_10__2803432263e518bbd16bccbbef8784ed.part  plain_washer_large_grade_a_m2_5__9a369f0dc77bf9c598cdf3fb468977e5.part  proximal.part  proximal_shell.part  rotule_ball.part  rotule_lever.part  scs0009.part  (+2 more)
AmazingHand_Enhanced/Demo/AHSimulation/AHSimulation/AH_Right/mjcf/: robot.xml
AmazingHand_Enhanced/Demo/HandTracking/HandTracking/: main.py
Demo/: dataflow_tracking_real.yml
Demo/AHControl/: Cargo.toml  test_presets.py
Demo/AHControl/config/: r_hand.toml
Demo/AHSimulation/AHSimulation/: mj_mink_left.py  mj_mink_right.py
Demo/AHSimulation/AHSimulation/AH_Right/mjcf/: robot copy.xml  robot.xml
Demo/HandTracking/HandTracking/: main.py
(+3 files in other folders)
