[package]
name = "AHControl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_convert = "0.9.0"
clap = "4.5.40"
dora-node-api = "0.3.11"
eyre = "0.6.12"
facet = "0.27.14"
facet-pretty = "0.23.21"
facet-toml = "0.25.15"
rustypot = {git="https://github.com/pollen-robotics/rustypot.git", branch="112-add-sts3032"}
serialport = "4.7.2"
toml = "0.8.23"
